Fix responsive breakpoints and site title align

--- a/wp-content/themes/rebalance-child-mmn/style.css
+++ b/wp-content/themes/rebalance-child-mmn/style.css
@@ -287,10 +287,11 @@ a, .mixcloud-footer-widget-container .closegomb {
 
 
 
-@media screen and (max-width: 881px) {
+@media screen and (max-width: 880px) {
 
-.mixcloud-footer-widget-container .closegomb {    padding: 2px 8px;   font-size: 1.2em; }
-.mixcloud-footer-widget-container.opened {    height: 65px !important; }
+  .mixcloud-footer-widget-container .closegomb {    padding: 2px 8px;   font-size: 1.2em; }
+  .mixcloud-footer-widget-container.opened {    height: 65px !important; }
+  ul.nav-menu.nav-menu-3 { border-top: 3px solid #CCC; }
     
 }
 
@@ -306,7 +307,6 @@ details summary {
 /* mmn: merites custom css */
 .merites-font {
   font-family: 'WindsorConDExtBol', sans-serif;
-  margin-bottom: 20px;
 }
 
 /* mmn: css to have the elements of the 4th menu block inline rather than below each other (merites blog/english content) */
@@ -329,10 +329,8 @@ details summary {
     flex: 1;
     text-align: right;
   }
-}
 
-@media screen and (max-width: 880px) {
-  ul.nav-menu.nav-menu-3 {
-    border-top: 3px solid #CCC;
+  .has-site-logo .site-title, .wp-custom-logo .site-title {
+    vertical-align: text-bottom;
   }
 }
